[gd_scene load_steps=3 format=3 uid="uid://dml5h6h7mh056"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_mm8ev"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikmgv"]
size = Vector2(40, 40)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_mm8ev")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ikmgv")

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
